# plot-cross-section

./: README.md  plot-cross-section.ipynb  pyproject.toml
data/: data_xsec_qop.pickle  faser-neutrino-tungsten-cross-section.root  stat_xsec_qop.pickle  xsec_eff.npy
src/utils/: colors.py  cross_section_wrapper.py
utils/: cross_section_utils.py  plot_utils.py  utils.py
