[project]
name = "plot-cross-section"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.9.0",
    "cycler>=0.12.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "skunk>=1.3.0",
    "uncertainties>=3.2.3",
    "uproot>=5.7.2",
]
